--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ h3 {
 }
 
 p {
-  color: #8f8f8f;
+  color: #757575;
 }
 
 /* SECTION COLOR */
@@ -69,7 +69,7 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  color: #8f8f8f;
+  color: #757575;
 }
 
 .nav-link:hover {
